--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,63 @@
 alembic==1.4.0
+astroid==2.4.2
+autopep8==1.5.5
+blinker==1.4
+cairocffi==1.2.0
+CairoSVG==2.5.2
 certifi==2019.11.28
+cffi==1.14.5
 Click==7.0
-Flask==1.1.1
+cssselect2==0.4.1
+defusedxml==0.7.1
+dnspython==2.1.0
+email-validator==1.1.2
+Flask==1.1.2
 Flask-Cors==3.0.8
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
+flask-mongoengine==1.0.0
+Flask-PyMongo==2.3.0
+Flask-QRcode==3.0.0
 flask-redis==0.4.0
 Flask-SQLAlchemy==2.4.1
+Flask-WeasyPrint==0.6
 Flask-WTF==0.14.3
 gunicorn==20.0.4
+html5lib==1.1
+idna==3.1
+isort==5.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
+lazy-object-proxy==1.4.3
 Mako==1.1.1
 MarkupSafe==1.1.1
+mccabe==0.6.1
+mongoengine==0.23.0
+pdfkit==0.6.1
+Pillow==8.1.0
+pkg-resources==0.0.0
+pycodestyle==2.6.0
+pycparser==2.20
+pylint==2.6.0
+pymongo==3.11.3
 PyMySQL==0.9.3
+Pyphen==0.10.0
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 python-editor==1.0.4
+pytz==2021.1
+qrcode==6.1
 redis==3.4.1
-six==1.14.0
+six==1.15.0
 SQLAlchemy==1.3.13
+tinycss2==1.1.0
+toml==0.10.2
+typed-ast==1.4.2
+WeasyPrint==52.5
+webencodings==0.5.1
 Werkzeug==1.0.0
 wincertstore==0.2
-WTForms==2.2.1
+wrapt==1.12.1
+WTForms==2.3.3
+XlsxWriter==1.3.6
