--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ boto3==1.34.144
 cairocffi==1.2.0
 CairoSVG==2.5.2
 certifi==2019.11.28
-cffi==1.14.5
+cffi==1.17.0
 Click==7.0
 cssselect2==0.4.1
 defusedxml==0.7.1
@@ -37,7 +37,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 mongoengine==0.23.0
 pdfkit==0.6.1
-Pillow==8.1.0
+Pillow==10.4.0
 pycodestyle==2.6.0
 pycparser==2.20
 pylint==2.6.0
@@ -52,6 +52,7 @@ python-editor==1.0.4
 pytz==2021.1
 qrcode==6.1
 redis==3.4.1
+sentry-sdk==2.13.0
 six==1.15.0
 SQLAlchemy==1.3.13
 tinycss2==1.1.0
